# open-agenda-builder-template

./: .agent.md  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: README.md  __init__.py  config.py  dependencies.py  main.py
app/data/: sample-sessions.json
app/models/: __init__.py  personal_agenda.py  session.py
app/routes/: __init__.py  api.py  web.py
app/services/: __init__.py  agenda_parser.py  agenda_service.py
app/static/css/: main.css
app/static/js/: agenda.js
app/templates/: base.html  error.html  index.html  my_agenda.html
deployment/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW_BOARD_REVIEW.md  DEPLOYMENT.md  README.md  dependency-transparency.md  local-container-test-status.md
examples/: README.md  agenda-export.ics  agenda-export.json
scripts/: deploy.sh  run-local-container-tests.sh
testing/: README.md  local-container-status.json  local_container_smoke_test.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_parser.py  test_service.py
